Adding the pin feature (#503)
* Adding the pin feature

* Adding pinned to returned projects

* Shift pinned feature to project users

* Update app/controllers/project.py


* Access logic

* Import pinview

* Adding pin to apidocs

* Refactor Get projects

* Remove parenthesis

* Use join statement

---------
