# api_docs.yml
@@ -429,6 +429,16 @@ paths:
           name: user_id
           required: true
           type: string
+        - in: query
+          name: page
+          type: integer
+          required: false
+          description: Page
+        - in: query
+          name: per_page
+          type: integer
+          required: false
+          description: per page
       responses:
         200:
           description: "Success"
@@ -2714,6 +2724,61 @@ paths:
           description: "window overides start and end values, series if true return series metrics, deployments are only shown for non series"
         404:
           description: "Project not found"
+        400:
+          description: "Bad request"
+        500:
+          description: "Internal Server Error"
+
+  "/projects/{project_id}/pin":
+    post:
+      tags:
+        - projects
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - in: header
+          name: Authorization
+          required: true
+          description: "Bearer [token]"
+          type: string
+        - in: path
+          name: project_id
+          required: true
+          type: string
+      responses:
+        200:
+          description: "Project pinned successfully"
+        404:
+          description: "Project not found"
+        400:
+          description: "Bad request"
+        500:
+          description: "Internal Server Error"
+    
+    delete:
+      tags:
+        - projects
+      consumes:
+        - application/json
+      description: "Unpin a project"
+      parameters:
+        - in: header
+          name: Authorization
+          required: true
+          type: string
+
+        - in: path
+          name: project_id
+          required: true
+          type: string
+
+      produces:
+        - application/json
+      responses:
+        201:
+          description: "Success"
         400:
           description: "Bad request"
         500:
